<resources>
    <string name="app_name">Tattood</string>

    <!-- Strings related to login -->
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_see_more">See More</string>
    <string name="title_activity_tattoo">TattooActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_name">Select a user name!</string>
    <string name="register">Register</string>
    <string name="no_result_found">No Result Found</string>
    <string name="tattoo_description">Image of the Tattoo</string>
    <string name="private_tattoos">Private Tattoos</string>
    <string name="public_tattoos">Public Tattoos</string>
    <string name="liked_tattoos">Liked Tattoos</string>
    <string name="upload">Upload</string>
    <string name="recent">Recent</string>
    <string name="see_more">See More</string>
    <string name="popular">Popular</string>
    <string name="liked">Liked</string>
    <string name="uploaded">Uploaded</string>
    <string name="sw_public">Public</string>
    <string name="sw_private">Private</string>
    <string name="new_tag">New Tag</string>
    <string name="by">by</string>
    <string name="user">User</string>
    <string name="extract_submit">Submit</string>
    <string name="tags">Tags</string>
    <string name="users">Users</string>
    <string name="title_edit">EditActivity</string>
    <string name="title_register">Register</string>
    <string name="title_profile">Profile</string>
    <string name="title_discovery">Discover</string>
    <string name="search">Search</string>
    <string name="search_hint">Search</string>
    <string name="add_new_tag">Enter new tag...</string>
    <string name="no_results_found">No results found...</string>
    <string name="title_activity_crop">CropActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="quila_name">Quila</string>
    <string name="quila_tagline">I love bones and slippers</string>
    <string name="quila_name2">Quila!</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus. Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie. Etiam ac tristique sem, id commodo justo. Phasellus congue tincidunt lectus, at dignissim ligula maximus eu. Quisque interdum nunc eget tellus bibendum suscipit. Phasellus feugiat ultricies posuere. Nullam porta accumsan velit, ut rutrum massa fermentum eu. Nunc ac bibendum nunc. Mauris eu ultricies ipsum. Ut id dolor dui. Pellentesque dictum dui vel tempus maximus. Vivamus non nisi quis libero scelerisque pretium. Ut eu tristique justo. Sed pellentesque placerat quam, ut ultricies turpis feugiat a. Aliquam a volutpat risus.

Praesent at lectus semper, suscipit elit in, facilisis massa. Phasellus sed vestibulum ante, a euismod sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tincidunt orci augue, a porta odio lacinia eu. Nunc in congue risus. Maecenas commodo nibh ac enim fermentum, eu sagittis massa blandit. Vestibulum elementum massa nec dapibus mollis. Etiam porta, est sit amet aliquet porta, odio elit finibus risus, id rutrum purus mi non ipsum. Nulla viverra nec enim sed venenatis.

Maecenas mattis, erat et viverra euismod, neque diam porttitor tellus, in fringilla metus est id augue. Nunc at metus cursus, porttitor nisi vitae, congue diam. Curabitur ligula massa, ullamcorper eget scelerisque vel, pharetra ac sapien. Ut auctor luctus ultricies. Nullam semper tortor ac elementum luctus. In et tempus ex. Praesent sodales, dolor id volutpat elementum, ligula enim euismod odio, maximus sodales magna neque nec neque. Curabitur pretium nisl neque, consequat aliquet dui tincidunt ac. Vivamus augue nunc, aliquet eu ex a, ultrices aliquam lorem. Duis nibh lectus, ultricies vel iaculis sit amet, imperdiet id sapien. Duis scelerisque sodales metus eu rutrum. Suspendisse posuere nisi ac magna consequat, eu vestibulum ipsum venenatis. Suspendisse auctor nisi nec leo venenatis tristique.

Praesent tincidunt lorem sit amet mi consequat cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae blandit sapien. Curabitur est sapien, lobortis sit amet facilisis vel, faucibus eu quam. Nam tempus libero at tellus tempor laoreet. Pellentesque quam lorem, tincidunt in molestie eget, dictum vel risus. Nunc gravida convallis mattis.
    </string>

</resources>
