<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/tv_no_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_results_found"
        android:visibility="invisible"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_tag"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tags"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/see_more_tag"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:text="@string/see_more"
                android:visibility="invisible"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/tag_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_user"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/users"
                android:visibility="invisible"/>

            <Button
                android:id="@+id/see_more_user"
                android:layout_width="159dp"
                android:layout_height="wrap_content"
                android:text="@string/see_more"
                android:visibility="invisible"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/user_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"/>
    </LinearLayout>

</LinearLayout>
