<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context="com.tattood.tattood.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/private_tattoos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_user_private"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/user_private_list"/>

            <TextView
                android:text="@string/public_tattoos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_user_public"/>

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/user_public_list"/>

            <TextView
                android:text="@string/liked_tattoos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_user_liked"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/user_liked_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_margin="@dimen/fab_margin"
                android:src="@drawable/ic_add_black_24dp"/>

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</FrameLayout>
