<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeContainer"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="?attr/colorPrimary"
            android:theme="@style/ToolBarStyle"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/see_more_recent"
            android:layout_alignBottom="@+id/see_more_recent"
            android:layout_alignStart="@+id/popular_list"
            android:layout_gravity="center_vertical|end"
            android:layout_marginStart="52dp"
            android:gravity="center_vertical|center"
            android:text="@string/recent"/>

        <Button
            android:id="@+id/see_more_recent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/see_more_popular"
            android:layout_below="@+id/toolbar"
            android:text="@string/see_more"/>


        <Button
            android:id="@+id/see_more_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/recent_list"
            android:layout_below="@+id/recent_list"
            android:layout_marginRight="8dp"
            android:layout_marginTop="23dp"
            android:text="@string/see_more"/>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/popular_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/see_more_popular"
            android:layout_marginTop="18dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recent_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/see_more_recent"
            android:layout_centerHorizontal="true"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/toolbar"
            app:layout_constraintRight_toRightOf="@+id/toolbar"
            app:layout_constraintTop_toBottomOf="@+id/see_more_recent"/>


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView"
            android:layout_alignTop="@+id/see_more_popular"
            android:text="@string/popular"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            app:borderWidth="0dp"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp"
            app:srcCompat="@drawable/ic_person_black_24dp"/>


    </RelativeLayout>

</android.support.v4.widget.SwipeRefreshLayout>
